# swarm-project

./: .gitignore  README.md
arucoReader/: CMakeLists.txt  config.json  runAruco.cpp
arucoReader/cameraConfigs/: TELLO-FDCA4C.yaml  TELLO-FDCCA9.yaml  camera1.yaml  camera2.yaml
arucoReader/include/: aruco.h  controller.h  steps.h  tellocom.h
arucoReader/src/: aruco.cpp  controller.cpp  tellocom.cpp
cameraCalibration/: CMakeLists.txt  config.json  telloCalibration.cpp
test_ctello/: CMakeLists.txt  config.json  test.cpp
